Fix SQL support and minor changes