@@ -79,63 +79,39 @@ enum TopicTypesEnum {
 
 public class BaseIntegrationTest {
 
-    private static final String PARITY_VOLUME_PATH = "target/parity";
-
-    private static final Integer MONGODB_PORT = 27017;
-
-    //"BytesValue" in hex
-    private static final String BYTES_VALUE_HEX = "0x427974657356616c756500000000000000000000000000000000000000000000";
-
     protected static final BigInteger GAS_PRICE = BigInteger.valueOf(22_000_000_000L);
     protected static final BigInteger GAS_LIMIT = BigInteger.valueOf(4_300_000);
-
     protected static final String DUMMY_EVENT_NAME = "DummyEvent";
     protected static final String DUMMY_EVENT_NOT_ORDERED_NAME = "DummyEventNotOrdered";
     protected static final String FAKE_CONTRACT_ADDRESS = "0xb4f391500fc66e6a1ac5d345f58bdcbea66c1a6f";
-
     protected static final Credentials CREDS = Credentials.create("0x4d5db4107d237df6a3d58ee5f70ae63d73d7658d4026f2eefd2f204c81682cb7");
-
     protected static final String ZERO_ADDRESS = "0x0000000000000000000000000000000000000000";
-
+    private static final String PARITY_VOLUME_PATH = "target/parity";
+    private static final Integer MONGODB_PORT = 27017;
+    //"BytesValue" in hex
+    private static final String BYTES_VALUE_HEX = "0x427974657356616c756500000000000000000000000000000000000000000000";
+    public static boolean shouldPersistNodeVolume = false;
     private static FixedHostPortGenericContainer parityContainer;
-
     private static FixedHostPortGenericContainer mongoDBContainer;
-
-    private List<ContractEventDetails> broadcastContractEvents = new ArrayList<>();
-
-    private List<BlockDetails> broadcastBlockMessages = new ArrayList<>();
-
-    private List<TransactionDetails> broadcastTransactionMessages = new ArrayList<>();
-
+    private final List<ContractEventDetails> broadcastContractEvents = new ArrayList<>();
+    private final List<BlockDetails> broadcastBlockMessages = new ArrayList<>();
+    private final List<TransactionDetails> broadcastTransactionMessages = new ArrayList<>();
+    private final Map<String, ContractEventFilter> registeredFilters = new HashMap<>();
+    private final List<String> registeredTransactionMonitorIds = new ArrayList<>();
     @LocalServerPort
     private int port;
-
     @Autowired(required = false)
     private ContractEventFilterRepository filterRepo;
-
     @Autowired(required = false)
     private TransactionMonitoringSpecRepository txFilterRepo;
-
     @Autowired(required = false)
     private ContractEventDetailsRepository eventDetailsRepository;
-
     private RestTemplate restTemplate;
-
     private String restUrl;
-
     private Web3j web3j;
-
     private Admin admin;
-
     private String dummyEventFilterId;
-
     private String dummyEventNotOrderedFilterId;
-
-    private Map<String, ContractEventFilter> registeredFilters = new HashMap<>();
-
-    private List<String> registeredTransactionMonitorIds = new ArrayList<>();
-
-    public static boolean shouldPersistNodeVolume = false;
 
     @BeforeAll
     public static void setupEnvironment() throws Exception {
@@ -146,34 +122,6 @@ public class BaseIntegrationTest {
 
         startParity();
         startMongo();
-    }
-
-    @BeforeEach
-    public void setUp() throws Exception {
-
-        initRestTemplate();
-        this.web3j = Web3j.build(new HttpService("http://localhost:8545"));
-        this.admin = Admin.build(new HttpService("http://localhost:8545"));
-
-        this.web3j.ethSendTransaction(Transaction.createEtherTransaction(
-                this.web3j.ethAccounts().send().getAccounts().get(0),
-
-                this.web3j.ethGetTransactionCount(
-                    this.web3j.ethAccounts().send().getAccounts().get(0),
-                        DefaultBlockParameterName.fromString("latest")
-                ).send().getTransactionCount(),
-
-                BigInteger.valueOf(2000),
-                BigInteger.valueOf(6721975),
-                CREDS.getAddress(),
-                new BigInteger("9460000000000000000"))
-        ).send();
-
-        dummyEventFilterId = UUID.randomUUID().toString();
-        dummyEventNotOrderedFilterId = UUID.randomUUID().toString();
-
-        clearMessages();
-
     }
 
     @AfterAll
@@ -194,6 +142,111 @@ public class BaseIntegrationTest {
             t.printStackTrace();
             //When running on circleci the parity dir cannot be deleted but this does no affect tests
         }
+    }
+
+    protected static byte[] stringToBytes(String string) {
+        byte[] byteValue = string.getBytes();
+        byte[] byteValueLen32 = new byte[32];
+        System.arraycopy(byteValue, 0, byteValueLen32, 0, byteValue.length);
+        return byteValueLen32;
+    }
+
+    protected static void startParity() {
+        parityContainer = new FixedHostPortGenericContainer("kauriorg/parity-docker:latest");
+        parityContainer.waitingFor(Wait.forListeningPort());
+        parityContainer.withFixedExposedPort(8545, 8545);
+        parityContainer.withFixedExposedPort(8546, 8546);
+        if (shouldPersistNodeVolume) {
+            parityContainer.withFileSystemBind(PARITY_VOLUME_PATH,
+                    "/root/.local/share/io.parity.ethereum/", BindMode.READ_WRITE);
+        }
+        parityContainer.addEnv("NO_BLOCKS", "true");
+        parityContainer.start();
+
+        waitForParityToStart(10000, Web3j.build(new HttpService("http://localhost:8545")));
+    }
+
+    protected static void startMongo() {
+        if (isLocalPortFree(MONGODB_PORT)) {
+            mongoDBContainer = new FixedHostPortGenericContainer("mongo:4.0.10");
+            mongoDBContainer.waitingFor(Wait.forListeningPort());
+            mongoDBContainer.withFixedExposedPort(MONGODB_PORT, MONGODB_PORT);
+            mongoDBContainer.waitingFor(Wait.forLogMessage(".*waiting for connections on port 27017.*", 1));
+
+            mongoDBContainer.start();
+            System.setProperty("spring.data.mongodb.uri", "mongodb://" + mongoDBContainer.getHost() + ":" +
+                    mongoDBContainer.getMappedPort(MONGODB_PORT).toString() + "/mongodb");
+        }
+    }
+
+    protected static void stopParity() {
+        parityContainer.stop();
+    }
+
+    protected static void stopMongo() {
+        if (mongoDBContainer != null) {
+            mongoDBContainer.stop();
+        }
+    }
+
+    public static Boolean isLocalPortFree(Integer port) {
+        try {
+            new ServerSocket(port).close();
+            return true;
+        } catch (IOException ignored) {
+            return false;
+        }
+    }
+
+    private static void waitForParityToStart(long timeToWait, Web3j web3j) {
+        final long startTime = System.currentTimeMillis();
+
+        while (true) {
+            if (System.currentTimeMillis() > startTime + timeToWait) {
+                throw new IllegalStateException("Parity failed to start...");
+            }
+
+            try {
+                web3j.web3ClientVersion().send();
+                break;
+            } catch (Throwable t) {
+                //If an error occurs, the node is not yet up
+            }
+
+            try {
+                Thread.sleep(500);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+    @BeforeEach
+    public void setUp() throws Exception {
+
+        initRestTemplate();
+        this.web3j = Web3j.build(new HttpService("http://localhost:8545"));
+        this.admin = Admin.build(new HttpService("http://localhost:8545"));
+
+        this.web3j.ethSendTransaction(Transaction.createEtherTransaction(
+                this.web3j.ethAccounts().send().getAccounts().getFirst(),
+
+                this.web3j.ethGetTransactionCount(
+                        this.web3j.ethAccounts().send().getAccounts().getFirst(),
+                        DefaultBlockParameterName.fromString("latest")
+                ).send().getTransactionCount(),
+
+                BigInteger.valueOf(2000),
+                BigInteger.valueOf(6721975),
+                CREDS.getAddress(),
+                new BigInteger("9460000000000000000"))
+        ).send();
+
+        dummyEventFilterId = UUID.randomUUID().toString();
+        dummyEventNotOrderedFilterId = UUID.randomUUID().toString();
+
+        clearMessages();
+
     }
 
     @AfterEach
@@ -259,15 +312,16 @@ public class BaseIntegrationTest {
     }
 
     protected List<ContractEventFilter> listEventFilters() {
-	final ResponseEntity<List<ContractEventFilter>> response = restTemplate.exchange(
-		  restUrl + "/api/rest/v1/event-filter",
-		  HttpMethod.GET,
-		  null,
-		  new ParameterizedTypeReference<List<ContractEventFilter>>(){});
+        final ResponseEntity<List<ContractEventFilter>> response = restTemplate.exchange(
+                restUrl + "/api/rest/v1/event-filter",
+                HttpMethod.GET,
+                null,
+                new ParameterizedTypeReference<List<ContractEventFilter>>() {
+                });
 
-	List<ContractEventFilter> contractEventFilters = response.getBody();
+        List<ContractEventFilter> contractEventFilters = response.getBody();
 
-	return contractEventFilters;
+        return contractEventFilters;
     }
 
     protected String monitorTransaction(TransactionMonitoringSpec monitorSpec) {
@@ -352,7 +406,7 @@ public class BaseIntegrationTest {
 
     protected String createRawSignedTransactionHex(String toAddress, BigInteger nonce) throws ExecutionException, InterruptedException {
 
-        final RawTransaction rawTransaction  = RawTransaction.createEtherTransaction(
+        final RawTransaction rawTransaction = RawTransaction.createEtherTransaction(
                 nonce, GAS_PRICE, GAS_LIMIT, toAddress, BigInteger.ONE);
 
         final byte[] signedTx = TransactionEncoder.signMessage(rawTransaction, CREDS);
@@ -367,7 +421,7 @@ public class BaseIntegrationTest {
     }
 
     protected void verifyDummyEventDetails(ContractEventFilter registeredFilter,
-                                         ContractEventDetails eventDetails, ContractEventStatus status) {
+                                           ContractEventDetails eventDetails, ContractEventStatus status) {
 
         verifyDummyEventDetails(registeredFilter, eventDetails, status,
                 BYTES_VALUE_HEX, Keys.toChecksumAddress(CREDS.getAddress()), BigInteger.TEN, "StringValue");
@@ -382,22 +436,15 @@ public class BaseIntegrationTest {
                                            String valueFour) {
         assertEquals(registeredFilter.getEventSpecification().getEventName(), eventDetails.getName());
         assertEquals(status, eventDetails.getStatus());
-        assertEquals(valueOne, eventDetails.getIndexedParameters().get(0).getValue());
+        assertEquals(valueOne, eventDetails.getIndexedParameters().getFirst().getValue());
         assertEquals(valueTwo,
                 eventDetails.getIndexedParameters().get(1).getValue());
-        assertEquals(valueThree, eventDetails.getNonIndexedParameters().get(0).getValue());
+        assertEquals(valueThree, eventDetails.getNonIndexedParameters().getFirst().getValue());
         assertEquals(valueFour, eventDetails.getNonIndexedParameters().get(1).getValue());
         assertEquals(BigInteger.ONE, eventDetails.getNonIndexedParameters().get(2).getValue());
         assertEquals(Web3jUtil.getSignature(registeredFilter.getEventSpecification()),
                 eventDetails.getEventSpecificationSignature());
         assertNotNull(eventDetails.getTimestamp());
-    }
-
-    protected static byte[] stringToBytes(String string) {
-        byte[] byteValue = string.getBytes();
-        byte[] byteValueLen32 = new byte[32];
-        System.arraycopy(byteValue, 0, byteValueLen32, 0, byteValue.length);
-        return byteValueLen32;
     }
 
     protected void waitForBroadcast() throws InterruptedException {
@@ -426,7 +473,7 @@ public class BaseIntegrationTest {
         waitForMessages(expectedTransactionMessages, getBroadcastTransactionMessages(), true, TopicTypesEnum.transaction);
     }
 
-    protected void waitForTransactionMessages(int expectedTransactionMessages,  boolean failOnTimeout) {
+    protected void waitForTransactionMessages(int expectedTransactionMessages, boolean failOnTimeout) {
         waitForMessages(expectedTransactionMessages, getBroadcastTransactionMessages(), failOnTimeout, TopicTypesEnum.transaction);
     }
 
@@ -442,7 +489,7 @@ public class BaseIntegrationTest {
         }
 
         final long startTime = System.currentTimeMillis();
-        while(true) {
+        while (true) {
             if (messages.size() >= expectedMessageCount) {
                 return true;
             }
@@ -472,12 +519,12 @@ public class BaseIntegrationTest {
         final ContractEventSpecification eventSpec = new ContractEventSpecification();
         eventSpec.setIndexedParameterDefinitions(
                 Arrays.asList(new ParameterDefinition(0, ParameterType.build("BYTES32")),
-                              new ParameterDefinition(1, ParameterType.build("ADDRESS"))));
+                        new ParameterDefinition(1, ParameterType.build("ADDRESS"))));
 
         eventSpec.setNonIndexedParameterDefinitions(
                 Arrays.asList(new ParameterDefinition(2, ParameterType.build("UINT256")),
-                              new ParameterDefinition(3, ParameterType.build("STRING")),
-                              new ParameterDefinition(4, ParameterType.build("UINT8"))));
+                        new ParameterDefinition(3, ParameterType.build("STRING")),
+                        new ParameterDefinition(4, ParameterType.build("UINT8"))));
 
         eventSpec.setEventName(DUMMY_EVENT_NAME);
 
@@ -493,12 +540,12 @@ public class BaseIntegrationTest {
         final ContractEventSpecification eventSpec = new ContractEventSpecification();
         eventSpec.setIndexedParameterDefinitions(
                 Arrays.asList(new ParameterDefinition(0, ParameterType.build("BYTES32")),
-                              new ParameterDefinition(2, ParameterType.build("ADDRESS"))));
+                        new ParameterDefinition(2, ParameterType.build("ADDRESS"))));
 
         eventSpec.setNonIndexedParameterDefinitions(
                 Arrays.asList(new ParameterDefinition(1, ParameterType.build("UINT256")),
-                              new ParameterDefinition(3, ParameterType.build("STRING")),
-                              new ParameterDefinition(4, ParameterType.build("UINT8"))));
+                        new ParameterDefinition(3, ParameterType.build("STRING")),
+                        new ParameterDefinition(4, ParameterType.build("UINT8"))));
 
         eventSpec.setEventName(DUMMY_EVENT_NOT_ORDERED_NAME);
 
@@ -541,44 +588,6 @@ public class BaseIntegrationTest {
         return contractEventFilter;
     }
 
-    protected static void startParity() {
-        parityContainer = new FixedHostPortGenericContainer("kauriorg/parity-docker:latest");
-        parityContainer.waitingFor(Wait.forListeningPort());
-        parityContainer.withFixedExposedPort(8545, 8545);
-        parityContainer.withFixedExposedPort(8546, 8546);
-        if (shouldPersistNodeVolume) {
-            parityContainer.withFileSystemBind(PARITY_VOLUME_PATH,
-                    "/root/.local/share/io.parity.ethereum/", BindMode.READ_WRITE);
-        }
-        parityContainer.addEnv("NO_BLOCKS", "true");
-        parityContainer.start();
-
-        waitForParityToStart(10000, Web3j.build(new HttpService("http://localhost:8545")));
-    }
-
-    protected static void startMongo() {
-        if (isLocalPortFree(MONGODB_PORT)) {
-            mongoDBContainer = new FixedHostPortGenericContainer("mongo:4.0.10");
-            mongoDBContainer.waitingFor(Wait.forListeningPort());
-            mongoDBContainer.withFixedExposedPort(MONGODB_PORT, MONGODB_PORT);
-            mongoDBContainer.waitingFor(Wait.forLogMessage(".*waiting for connections on port 27017.*", 1));
-
-            mongoDBContainer.start();
-            System.setProperty("spring.data.mongodb.uri", "mongodb://" + mongoDBContainer.getHost() + ":" +
-                    mongoDBContainer.getMappedPort(MONGODB_PORT).toString() + "/mongodb");
-        }
-    }
-
-    protected static void stopParity() {
-        parityContainer.stop();
-    }
-
-    protected static void stopMongo() {
-        if (mongoDBContainer != null) {
-            mongoDBContainer.stop();
-        }
-    }
-
     private <T> String generateFailureMessage(int expectedMessageCount, List<T> messages, TopicTypesEnum type) {
         final StringBuilder builder = new StringBuilder("Failed to receive all expected " + type);
         builder.append("\n");
@@ -599,7 +608,8 @@ public class BaseIntegrationTest {
         builder.append("\n\n");
         try {
             builder.append(JSON.stringify(IterableUtils.toList(eventDetailsRepository.findAll())));
-        } catch(Exception ex) {}
+        } catch (Exception ex) {
+        }
 
         return builder.toString();
     }
@@ -607,37 +617,5 @@ public class BaseIntegrationTest {
     private void initRestTemplate() {
         restUrl = "http://localhost:" + port;
         restTemplate = new RestTemplate();
-    }
-
-    public static Boolean isLocalPortFree(Integer port) {
-        try {
-            new ServerSocket(port).close();
-            return true;
-        } catch (IOException ignored) {
-            return false;
-        }
-    }
-
-    private static void waitForParityToStart(long timeToWait, Web3j web3j) {
-        final long startTime = System.currentTimeMillis();
-
-        while (true) {
-            if (System.currentTimeMillis() > startTime + timeToWait) {
-                throw new IllegalStateException("Parity failed to start...");
-            }
-
-            try {
-                web3j.web3ClientVersion().send();
-                break;
-            } catch (Throwable t) {
-                //If an error occurs, the node is not yet up
-            }
-
-            try {
-                Thread.sleep(500);
-            } catch (InterruptedException e) {
-                e.printStackTrace();;
-            }
-        }
     }
 }
